feat(user): new route for create a new user
